--- a/slurm_job_generator.ipynb
+++ b/slurm_job_generator.ipynb
@@ -274,7 +274,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.16"
+      "version": "2.7.undefined"
     }
   },
   "nbformat": 4,
